updated test in order for them not to use deprecated methods
git-svn-id: https://dynamicjasper.svn.sourceforge.net/svnroot/dynamicjasper/api/trunk@216 2bfdcaec-5528-0410-9d21-f7f2b6497bdd